# QSabotage

./: CLAUDE.md  CMakeLists.txt  Explosion.qml  Helicopter.qml  Paratrooper.qml  README.md  Turret.qml  generate_sounds.py  main.cpp  main.qml
docs/plans/: 2026-01-31-component-modularization.md  2026-02-01-apple2-mode-design.md  2026-02-01-apple2-mode.md  2026-02-01-sound-effects.md
